<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hospitallocator.Register"
    tools:showIn="@layout/activity2"
    android:background="@drawable/centre_background"
    android:focusableInTouchMode="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/personalDetailsCard"
        android:layout_height="wrap_content"
        style="@style/centreLocatorCardDesign"
        android:layout_marginTop="45dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:focusableInTouchMode="false"
        android:orientation="vertical"
        android:padding="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtfName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_fname"
                style="@style/modifiedEditText"
                android:hint="@string/fname_hint"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtlName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_lname"
                style="@style/modifiedEditText"
                android:hint="@string/lname_hint"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_email"
                style="@style/modifiedEditText"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputMob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtMob"
                style="@style/modifiedEditText"
                android:hint="@string/mobno"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/txtInputReg"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <EditText-->
<!--                android:id="@+id/txtReg"-->
<!--                style="@style/modifiedEditText"-->
<!--                android:hint="@string/reg_no" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->


<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/txtInputFeedback"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <EditText-->
<!--                android:id="@+id/txtFeed"-->
<!--                style="@style/modifiedEditText"-->
<!--                android:hint="@string/message"-->
<!--                android:inputType="textMultiLine"-->
<!--                android:minLines="2" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <Button
            android:id="@+id/btn_register"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/centre_button"
            android:text="@string/register_btn"
            android:textColor="@color/whiteTextColor" />
    </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>